@@ -1,6 +1,5 @@
 package com.endava.cats.util;
 
-import com.google.common.collect.ImmutableMap;
 import org.springframework.stereotype.Component;
 
 import java.util.Map;
@@ -8,7 +7,7 @@ import java.util.Optional;
 
 @Component
 public class CatsDSLParser {
-    private static final Map<String, Parser> PARSERS = ImmutableMap.of("T(java.time", new SimpleParser(), "T(org.apache.commons.lang3", new SimpleParser(),
+    private static final Map<String, Parser> PARSERS = Map.of("T(java.time", new SimpleParser(), "T(org.apache.commons.lang3", new SimpleParser(),
             "T(java.util", new SimpleParser());
 
     public String parseAndGetResult(String valueFromFile, String jsonPayload) {
